Fixed plot bug in imbalance example in clasfn I

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -797,10 +797,10 @@ prediction_table <- bind_cols(knnPredGrid, pcgrid) %>% rename(Class = .pred_clas
 #create the basic plt
 rare_plot <- 
   ggplot() + 
-    geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
     geom_point(data = rare_cancer, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.75) +
+    geom_point(data = prediction_table, mapping = aes(x = Perimeter, y = Concavity, color = Class), alpha=0.02, size=5.)+
     labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Malignant","Benign"), values = c(cbPalette[2], cbPalette[1]))
+    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 
 rare_plot
 ```
