updated learning objs in clsfcn I for tidymodels

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -23,8 +23,9 @@ predictions from our classifier are, as well as how to improve our classifier
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors
 - Explain the K-nearest neighbour classification algorithm
 - Perform K-nearest neighbour classification in R using `tidymodels`  
-- Standardize variables in R using `tidymodels`, and explain why standardization is useful in predictive modelling
-- Handle imbalanced data in R using `tidymodels`, and explain why imbalanced data are problematic for classifiers
+- Explain why one should center, scale, and balance data in predictive modelling
+- Preprocess data to center, scale, and balance a dataset using a `recipe` 
+- Combine preprocessing and model training using a `workflow`
 
 
 ## The classification problem
